# zenlixem

./: .gitattributes  .gitignore  .yamllint.yml  Cargo.toml  FINAL.md  LICENSE  README.md  TRADEMARK.md  build.sh  deny.toml
.cargo/: config.toml
.github/: FUNDING.yml  guide.md
.github/workflows/: ci.yml  release.yml
crates/cliutil/: Cargo.toml  build.rs
crates/cliutil/src/: lib.rs
crates/fsmeta/: Cargo.toml
crates/fsmeta/src/: lib.rs
crates/procscan/: Cargo.toml
crates/procscan/src/: lib.rs
docs/: perf.md  post-f-checklist.md
man/: envpath.1  lasttouch.1  whoholds.1  whyopen.1  zenlixem.1
tools/envpath/: Cargo.toml
tools/envpath/src/: main.rs
tools/lasttouch/: Cargo.toml
tools/lasttouch/src/: main.rs
tools/whoholds/: Cargo.toml
tools/whoholds/src/: main.rs
tools/whyopen/: Cargo.toml
tools/whyopen/src/: main.rs
tools/zenlixem/: Cargo.toml
tools/zenlixem/src/: main.rs
