[workspace]
members = [
  "crates/procscan",
  "crates/fsmeta",
  "crates/cliutil",
  "tools/whoholds",
  "tools/lasttouch",
  "tools/envpath",
  "tools/zenlixem",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["rezky_nightky"]
repository = "https://github.com/oxyzenq/zenlixem"
homepage = "https://github.com/oxyzenq/zenlixem"
description = "zenlixem is a small, Linux-focused CLI suite for system introspection."
readme = "../../README.md"
license = "MIT"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.linux-amd64-universal]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.linux-amd64-universal-tiny]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.linux-aarch64-universal]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.linux-aarch64-universal-tiny]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
