[package]
name = "cliutil"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
clap = { workspace = true, optional = true }

[features]
default = []
clap = ["dep:clap"]
