[package]
name = "whyopen"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
cliutil = { path = "../../crates/cliutil" }
fsmeta = { path = "../../crates/fsmeta" }
procscan = { path = "../../crates/procscan" }
